plugins {
    id 'com.android.application'
    id 'kotlin-android'
    id 'com.google.devtools.ksp'
    id 'org.jetbrains.kotlin.plugin.compose'
    id 'kotlin-parcelize'
    id 'com.google.dagger.hilt.android'
}

android {
    namespace 'com.dixitpatel.dchatdemo'
    compileSdk = 36
    buildToolsVersion = "36.0.0"

    defaultConfig {
        applicationId "com.dixitpatel.dchatdemo"
        minSdk 32
        targetSdk 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "com.dixitpatel.dchatdemo.HiltTestRunner"

        buildConfigField "String", "CHAT_BASE_URL", project.CHAT_BASE_URL
    }
    ksp {
        arg("room.schemaLocation", "$projectDir/schemas")
        // Configure Room to generate Kotlin source code
        // This achieves proper nullability in Flow<T>
        arg("room.generateKotlin", "true")
    }


    buildTypes {
        debug {
            shrinkResources false
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            enableUnitTestCoverage true
            enableAndroidTestCoverage true
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    buildFeatures {
        compose true
        buildConfig = true
    }

    composeOptions {
        kotlinCompilerExtensionVersion = "$compose_compiler_version"
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }


    testOptions {
        unitTests {
            includeAndroidResources = true
            returnDefaultValues = true
            all {
                jvmArgs("-XX:+EnableDynamicAgentLoading")
                testLogging {
                    events = ["passed", "skipped", "failed", "standardOut", "standardError"]
                }
            }
        }
    }

    packagingOptions {
        // Resolving conflict in mockk
        resources {
            excludes += '/META-INF/*'
        }
    }
}
import org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile

tasks.withType(KotlinJvmCompile).configureEach {
    compilerOptions {
        freeCompilerArgs.add("-XXLanguage:+PropertyParamAnnotationDefaultTargetMode")
    }
}

dependencies {
    implementation 'androidx.core:core-ktx:1.17.0'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'com.google.android.material:material:1.13.0'

    // Certificate Transparency : For Security
    implementation 'com.appmattus.certificatetransparency:certificatetransparency-android:2.8.7'

    // Compose
    def composeBom = platform("androidx.compose:compose-bom:2025.11.00")
    implementation(composeBom)
    androidTestImplementation composeBom
    implementation 'androidx.compose.ui:ui'
    implementation("androidx.compose.compiler:compiler:$compose_compiler_version")
    implementation 'androidx.navigation:navigation-compose:2.9.6'

    // Tooling support (Previews, etc.)
    implementation 'androidx.compose.ui:ui-tooling'
    debugImplementation "androidx.compose.ui:ui-tooling-preview"
    // Material Design
    implementation 'androidx.compose.material:material'
    implementation 'androidx.compose.material3:material3:'
    // Material design icons
    implementation 'androidx.compose.material:material-icons-core'
    implementation 'androidx.compose.material:material-icons-extended'
    // Integration with activities
    implementation 'androidx.activity:activity-compose'
    // Integration with ViewModels
    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.9.4'

    // Coroutines
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"

    // Nav
    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
    implementation("androidx.navigation:navigation-ui-ktx:$nav_version")

    //Dagger - Hilt
    implementation "com.google.dagger:hilt-android:$hilt_version"
    ksp "com.google.dagger:hilt-compiler:$hilt_version"
    ksp "com.google.dagger:hilt-android-compiler:$hilt_version"
    ksp 'androidx.hilt:hilt-compiler:1.3.0'
    //noinspection GradleDependency
    implementation "androidx.hilt:hilt-navigation-compose:1.2.0"

    // Room
    implementation "androidx.room:room-runtime:$room_version"
    ksp "androidx.room:room-compiler:$room_version"

    // Retrofit
    implementation "com.squareup.retrofit2:retrofit:3.0.0"
    implementation "com.squareup.retrofit2:converter-gson:3.0.0"
    implementation 'com.google.code.gson:gson:2.13.2'
    implementation "com.squareup.okhttp3:logging-interceptor:5.1.0"

    // Local unit tests
    testImplementation "io.mockk:mockk:$mockkVersion"
    testImplementation "androidx.test:core:1.6.1"
    testImplementation 'androidx.test:runner:1.6.2'
    testImplementation "junit:junit:4.13.2"
    testImplementation 'androidx.compose.ui:ui-test-junit4:1.9.2'
    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.9.2'
    testImplementation "androidx.arch.core:core-testing:2.2.0"
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.10.2"
    testImplementation "com.google.truth:truth:1.4.5"
    testImplementation 'com.squareup.okhttp3:mockwebserver:5.1.0'
    testImplementation "org.jetbrains.kotlin:kotlin-test:1.8.22"
    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.8.22"
    testImplementation 'androidx.navigation:navigation-testing:2.9.6'
    testImplementation "app.cash.turbine:turbine:1.2.1"
    testImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
    kspTest "com.google.dagger:hilt-android-compiler:$hilt_version" // Keep this

    // Instrumentation tests
    debugImplementation "com.google.dagger:hilt-android-testing:$hilt_version" // This is correct for debug builds
    kspAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version" // Keep this
    androidTestImplementation platform('androidx.compose:compose-bom:2025.09.01')
    androidTestImplementation 'androidx.test:core-ktx:1.4.0'
    androidTestImplementation 'androidx.test:runner:1.6.2'
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    androidTestImplementation 'androidx.test.ext:junit-ktx:1.2.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
    androidTestImplementation "junit:junit:4.13.2"
    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.10.2"
    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
    androidTestImplementation "com.google.truth:truth:1.4.5"
    androidTestImplementation "io.mockk:mockk-android:${mockkVersion}"
    androidTestImplementation "io.mockk:mockk-agent:${mockkVersion}"
    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
    androidTestImplementation 'androidx.navigation:navigation-testing:2.9.6'

    debugImplementation "androidx.test:core:1.6.1"
    debugImplementation 'androidx.compose.ui:ui-tooling'
    debugImplementation 'androidx.compose.ui:ui-test-manifest'

    testImplementation project(":test-utils")
    androidTestImplementation project(":test-utils")
}